unpackaged/main/default/objects/project_cloud__Allocation__c/project_cloud__Allocation__c.object-meta.xml
<CustomObject>
    <label>Allocation</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Allocation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>