unpackaged/main/default/objects/project_cloud__Allocation__c/fields/project_cloud__Allocation_Group__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Allocation_Group__c</fullName>
    <inlineHelpText>Allocation Group is in a Master-Detail relationship with Allocation. Allocation Group is a grouping of Allocation records by Work Type.</inlineHelpText>
    <label>Allocation Group</label>
    <referenceTo>project_cloud__Allocation_Group__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>