unpackaged/main/default/objects/project_cloud__Allocation__c/fields/project_cloud__End__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__End__c</fullName>
    <formula>IF(ISBLANK(project_cloud__End_Override__c), project_cloud__Allocation_Group__r.project_cloud__End__c, project_cloud__End_Override__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The end date of the Allocation record, calculated by the Calculated End Date of the related Project Task</inlineHelpText>
    <label>End (Calculated)</label>
    <type>Date</type>
</CustomField>