unpackaged/main/default/objects/project_cloud__Allocation__c/fields/project_cloud__End_Override__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__End_Override__c</fullName>
    <inlineHelpText>Populating this field with a date will override the End (Calculated) field</inlineHelpText>
    <label>End (Override)</label>
    <type>Date</type>
</CustomField>