unpackaged/main/default/objects/project_cloud__Allocation__c/fields/project_cloud__First_Allocation__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__First_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set to true if it&#39;s the first time a given user has been allocated on the project, used for automation purposes</description>
    <inlineHelpText>This field is set to true if it&#39;s the first time a given user has been allocated on the project</inlineHelpText>
    <label>First Allocation</label>
    <type>Checkbox</type>
</CustomField>