unpackaged/main/default/objects/project_cloud__Allocation__c/fields/project_cloud__Hours__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours__c</fullName>
    <formula>/*(End__c - Start__c) * Hours_Day__c*/
BLANKVALUE(project_cloud__Hours_Override__c,
    IF (project_cloud__Allocation_Group__r.project_cloud__Resourcing_Mode__c == &#39;timeBased&#39;,
        project_cloud__Hours_Day__c * project_cloud__Working_Days__c,
        project_cloud__Allocation_Group__r.project_cloud__Allocation_Summary__r.project_cloud__Project_Task__r.project_cloud__Estimated_Hours__c * ( project_cloud__Load__c * (IF( ISBLANK(project_cloud__Allocation_Group__r.project_cloud__Load_Override__c), (project_cloud__Allocation_Group__r.project_cloud__Load__c *  project_cloud__Allocation_Group__r.project_cloud__Allocation_Summary__r.project_cloud__Available_Load__c), project_cloud__Allocation_Group__r.project_cloud__Load__c) ) )
    )
)</formula>
    <inlineHelpText>End (Calculated) - Start (Calculated) * Hours Per Day</inlineHelpText>
    <label>Hours (Calculated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>