unpackaged/main/default/objects/project_cloud__Allocation__c/fields/project_cloud__Hours_Override__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours_Override__c</fullName>
    <inlineHelpText>An override of the Hours (Calculated) field</inlineHelpText>
    <label>Hours (Override)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>