unpackaged/main/default/objects/project_cloud__Allocation__c/fields/project_cloud__Hours_Week__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours_Week__c</fullName>
    <formula>project_cloud__Hours_Day__c * 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The calculated hours per week based upon the assigned load % and the number of estimated hours on the related Project Task</inlineHelpText>
    <label>Hours Per Week (Calculated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>