unpackaged/main/default/objects/project_cloud__Allocation__c/fields/project_cloud__Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours_Worked__c</fullName>
    <inlineHelpText>A rollup of the hours entered against the Project Task by the assigned user</inlineHelpText>
    <label>Hours Worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>