unpackaged/main/default/objects/project_cloud__Allocation__c/fields/project_cloud__IsSoft__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsSoft__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether the allocation is a soft allocation.</inlineHelpText>
    <label>Soft Allocation</label>
    <type>Checkbox</type>
</CustomField>