unpackaged/main/default/objects/project_cloud__Allocation__c/fields/project_cloud__Load_Override__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Load_Override__c</fullName>
    <inlineHelpText>Used to manually override the Load (Calculated) field</inlineHelpText>
    <label>Load (Override)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>