unpackaged/main/default/objects/project_cloud__Allocation__c/fields/project_cloud__Load_Score_1__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Load_Score_1__c</fullName>
    <description>This is field is used for resource load calculations in the system, it should not be used for reporting or displayed to a user.</description>
    <formula>(project_cloud__Hours_Day__c / 8) * MIN(project_cloud__Allocation_Group__r.project_cloud__Allocation_Summary__r.project_cloud__Project_Task__r.project_cloud__Working_Total__c, 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Load Score 1 (System)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>