unpackaged/main/default/objects/project_cloud__Allocation__c/fields/project_cloud__Load_Score_2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Load_Score_2__c</fullName>
    <formula>(project_cloud__Hours_Day__c / 8) * MIN(project_cloud__Allocation_Group__r.project_cloud__Allocation_Summary__r.project_cloud__Project_Task__r.project_cloud__Working_Total__c, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Load Score 2 (System)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>