unpackaged/main/default/objects/project_cloud__Allocation__c/fields/project_cloud__Quick_Allocation__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Quick_Allocation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>A Quick Allocation is created as a parent object to Allocation when a user is assigned to a project using Project level, &#39;Quick Subscribe&#39;, resourcing.</inlineHelpText>
    <label>Quick Allocation</label>
    <referenceTo>project_cloud__Quick_Allocation__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>