unpackaged/main/default/objects/project_cloud__Allocation__c/fields/project_cloud__Self_Assigned__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Self_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether a user assigned themselves to the project task using the Pickup capability in My Day.</inlineHelpText>
    <label>Self Assigned</label>
    <type>Checkbox</type>
</CustomField>