unpackaged/main/default/objects/project_cloud__Allocation__c/fields/project_cloud__Skill__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Skill__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field specifies a &quot;Skill&quot; Work Type for the Allocation and impacts the Project Tasks returned on the My Day page. This field only impacts &quot;Time-Based&quot; allocations</description>
    <inlineHelpText>This field specifies a Work Type for the Allocation.</inlineHelpText>
    <label>Skill</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>project_cloud__Work_Type__c.project_cloud__Type__c</field>
            <operation>equals</operation>
            <value>Skill</value>
        </filterItems>
        <filterItems>
            <field>project_cloud__Work_Type__c.project_cloud__Parent__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>project_cloud__Work_Type__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>