unpackaged/main/default/objects/project_cloud__Allocation__c/fields/project_cloud__Start__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Start__c</fullName>
    <formula>IF(ISNULL(project_cloud__Start_Override__c), project_cloud__Allocation_Group__r.project_cloud__Start__c, project_cloud__Start_Override__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The start date of the Allocation record, calculated by the Calculated Start Date of the related Project Task</inlineHelpText>
    <label>Start (Calculated)</label>
    <type>Date</type>
</CustomField>