unpackaged/main/default/objects/project_cloud__Allocation__c/fields/project_cloud__User__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user assigned to the Project Task</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>