unpackaged/main/default/objects/project_cloud__Allocation__c/fields/project_cloud__Working_Days__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Working_Days__c</fullName>
    <inlineHelpText>Calculates the working days between the start and end date</inlineHelpText>
    <label>Working Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>