unpackaged/main/default/objects/project_cloud__Allocation__c/recordTypes/project_cloud__Allocation.recordType-meta.xml
<RecordType>
    <fullName>project_cloud__Allocation</fullName>
    <active>true</active>
    <label>Allocation</label>
</RecordType>