unpackaged/main/default/objects/project_cloud__Allocation__c/recordTypes/project_cloud__Subscription.recordType-meta.xml
<RecordType>
    <fullName>project_cloud__Subscription</fullName>
    <active>true</active>
    <label>Subscription</label>
</RecordType>